--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,5 +2,6 @@
 .mainSection{
     width: 100%;
     height: 628px;
-    background-image: url();
+    display: block;
+    background-image: url('/src/images/rectangle-1.png');
 }
