--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -1,8 +1,6 @@
 .contact {
     max-width: 942px; 
-
     margin: 0 auto;
-
 }
 
 .contact__form{
@@ -10,9 +8,8 @@
     height: 350px;
     width: 100%;
     display: grid;
-    grid-template-rows: repeat(7, 1fr);
     grid-template-columns: repeat(6, 1fr);
-    
+    grid-template-rows: repeat(6, 1fr);
     margin: 0 auto;
     grid-gap: 10px;
 
@@ -39,12 +36,21 @@
     max-height: 46px;
     grid-column: 1/3;
     grid-row: 1/2; 
+    
+    @media(max-width: 600px){
+        grid-column: 1/7;
+        grid-row: 1;
+    }
 }
 .input2 {
     grid-column: 3/5;
     grid-row: 1;
     max-height: 46px;
 
+    @media(max-width: 600px){
+        grid-column: 1/7;
+        grid-row: 2;
+    }
 }
 .input3 {
     padding: 0;
@@ -55,17 +61,34 @@
     max-height:52px;
     background-color: white;
 
+    @media(max-width: 600px){
+      grid-column: 1/7;
+      grid-row: 3;  
+    }
 }
 .input4 {
     grid-column: 1/7; 
-    grid-row: 2/4;
+    grid-row: 5;//4
     height: 256px;
 }
 
-.centralized {
+.subtopic__input{
+    grid-column: 1/7;
+    grid-row: 4;
+
+
+}
+
+.button__container {
     max-width: 942px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto;
+    margin-top: 83px;
+    @media(max-width: 600px){
+        margin-top: 163px;
+    }
 }
+
+
