--- a/src/css/shared.scss
+++ b/src/css/shared.scss
@@ -43,6 +43,18 @@ h1 {
     text-align: center;
     color: #3a424c;
     padding: 20px;
-    margin: 10px 0;
+    margin: 0 0 91 0;
     text-align: center;
+}
+
+h2 {
+    font-family: "Open Sans";
+    font-size: 24px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: center;
+    color: #3a424c;
 }
