--- a/src/css/service.scss
+++ b/src/css/service.scss
@@ -15,6 +15,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
+    @media(max-width: 942px) {
+        flex-direction: column;
+    }
 }
 
 .service__path__crosser {
@@ -22,6 +26,10 @@
     height: 96px;
     position: relative;
     bottom: 20px; 
+
+    @media(max-width: 942px) {
+        display: none;
+    }
 }
 
 .service__feature {
