--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -79,6 +79,10 @@
 
 }
 
+.input__validation__fail {
+    border: 1px solid red !important;
+}
+
 .button__container {
     max-width: 942px;
     display: flex;
@@ -86,6 +90,7 @@
     align-items: center;
     margin: auto;
     margin-top: 83px;
+
     @media(max-width: 600px){
         margin-top: 163px;
     }
