--- a/src/css/portfolio.scss
+++ b/src/css/portfolio.scss
@@ -1,3 +1,5 @@
+@import "./shared.scss";
+
 .portfolio {
     display: block;
     width: 100%;
@@ -19,6 +21,12 @@
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(4, 1fr);
 
+
+    // @media(min-width: 1440px) {
+    //     grid-template-rows: repeat(1, 1fr);
+    //     grid-template-columns: repeat(8, 1fr);
+    // }
+
     @media(max-width: 600px) {
         grid-template-rows: repeat(4, 1fr);
         grid-template-columns: repeat(2, 1fr);
@@ -30,12 +38,46 @@
 
 }
 
-.grid__item {
+.grid__item__wrapper {
+    display: flex;
+    // flex-direction: column;
+
+    p{  
+        text-align:center;
+        width: 100%;
+   
+        width:100%;
+        color:#FFFFFF;
+        font-family: "Open Sans";
+        text-transform:uppercase;
+        // color: var(--salmon);
+        // display:none;
+    }
+
+    object-fit: contain;
+}
+
+.grid__image {
     width: 100%;
     height: 100%;
-    img {
-        width: 100%;
-        height: 100%;
 
+    &:hover{
+        filter: brightness(0.3);
+        -webkit-filter:brightness(0.3);
+        -ms-filter:brightness(0.3);
     }
+}
+
+.grid__image__hover {
+    // color: var(--salmon)
+    width: 100%;
+    height: 100%;
+    min-width: 100%;
+    max-height: 100px;
+    background-color: red;
+
+}
+
+.grid__hover__plus{
+
 }
