--- a/src/css/shared.scss
+++ b/src/css/shared.scss
@@ -1,6 +1,16 @@
 //fonts
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
+//var colors
+
+$charcoal-grey: #3d454f;
+$salmon: #ff6868;
+
+
+$inputs: #f5f7f9;
+$input-placeholder: #a2a2a2;
+
+
 //buttons
 .btn{
     border: none;
