--- a/src/css/portfolio.scss
+++ b/src/css/portfolio.scss
@@ -1,11 +1,9 @@
 @import "./shared.scss";
 
-ol, ul {
+.project_main_container ol, ul {
     list-style: none;
     line-height: 0;
     padding: 0;
-    
-
 }
 
 .project_main_container {
@@ -27,6 +25,7 @@ ol, ul {
 
 .project_media h1 {
     
+    display: block;
     text-align:center;
     position:absolute;
     
@@ -41,18 +40,31 @@ ol, ul {
     text-transform:uppercase;
     display:none;
 
+    font-size: 24px;
+    font-weight: 900;
+    font-weight: bold;
+    font-style: normal;
+
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
 
-    background-image: linear-gradient(to top, #3d454f, #ff6868), linear-gradient(to bottom, #ffffff, #ffffff);
-    
+    background-image: linear-gradient(to top, #3d454f, #ff6868);
+
     font-size: 24px;
-    // font-weight: 800;
-    
-    @media(min-width: 1920px){
-        font-size: 40px;
+
+
+    a {
+        padding: 0;
+        margin: 0;
+
+        border-radius: 50%;
+        padding: 0 10px;
+        margin-left: 20px;
+
+        border: 2px solid #ff6868;
     }
+    
 }
 
 .project_container img {
@@ -61,8 +73,6 @@ ol, ul {
 }
 
 .project_container:hover img {
-
-
     filter: brightness(0.3);
     -webkit-filter:brightness(0.3);
     -ms-filter:brightness(0.3);
@@ -82,6 +92,7 @@ ol, ul {
 }
 
 @media(max-width: 768px) {
+    //row of 2 boxes
         .project_container{
             width: 50%;
         }
@@ -104,7 +115,6 @@ ol, ul {
 }
 
 
-.grid__titleHover {
+.grid__title__hover {
     all: initial;
-
 }
