--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -1,10 +1,9 @@
 .header__wrapper {
     width: 100%;
     height: 95px;
-    background-image: linear-gradient(to bottom, #333b45, #3d454f);
-    
-  
+    background-image: linear-gradient(to bottom, #333b45, #3d454f); 
 }
+
 
 .header {
     margin: 0 auto;
@@ -14,13 +13,14 @@
     justify-content: space-between;
     align-items: center;
     min-height: 95px;
-    background-image: linear-gradient(to bottom, #333b45, #3d454f);
 }
 
 .header__logo{
+    all: initial;
     font-family: "Open Sans";
     font-size: 22px;
-    font-weight: 800;
+    font-weight: bolder;
+    font-weight: 900;
     font-style: normal;
     font-stretch: normal;
     line-height: normal;
@@ -33,10 +33,14 @@
         color: #ff6868;
         text-decoration: none;
     }
+
+    @media(max-width: 942px) {
+        margin-left: 25px;
+    }
 }
 
-.header__nav{
-    transform: translateY(-15px);
+.header__horizontal__nav{
+    transform: translateY(-10px);
     ul{
 
         display: flex;
@@ -69,4 +73,69 @@
     line-height: normal;
     letter-spacing: normal;
     color: #ffffff;
+
+    @media(max-width: 500px) {
+        display: none;
+    }
+}
+
+
+.header__menu {
+    display: none;
+    width: 50px;
+    height: 21px;
+    & > div {
+        width: 30px;
+        height: 5px;
+        border-radius: 5px;
+        transition: 0.4s;
+        background-color: white;
+        &:first-child,
+        &:last-child {
+        margin: 4px 0;
+        }
+    }
+
+    &.isOpen {
+        div:nth-child(2) {
+          margin-top: -9px;
+          transform: rotate(135deg);
+        }
+        div:first-child {
+          transform: rotate(45deg);
+        }
+        div:last-child {
+          display: none;
+        }
+
+        transition: all 0.2s ease;
+    }
+
+    @media(max-width: 500px) {
+        display: block;
+    }
+}
+
+
+.header_mobile_menu {
+    // display: none;
+    display: block;
+    width: 100%;
+    height: 0px;
+
+    
+//   opacity: ${props => props.isVisible ? '1'  : '0'};
+//   visibility: ${props => props.isVisible ? 'visible'  : 'hidden'};
+//   height: ${props => props.isVisible ? '200px'  : '0px'};
+//   ul {
+//     list-style: none;
+//     display: flex;
+//     flex-direction: column;
+//   }
+}
+
+.open_mobile_menu {
+    height: 200px;
+    transition: height 0.5s ease;
+
 }
