--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -1,6 +1,6 @@
 .header__wrapper {
     width: 100%;
-    height: 95px;
+    min-height: 95px;
     background-image: linear-gradient(to bottom, #333b45, #3d454f); 
 }
 
@@ -40,7 +40,6 @@
 }
 
 .header__horizontal__nav{
-    transform: translateY(-10px);
     ul{
 
         display: flex;
@@ -84,6 +83,7 @@
     display: none;
     width: 50px;
     height: 21px;
+    cursor: pointer;
     & > div {
         width: 30px;
         height: 5px;
@@ -118,24 +118,44 @@
 
 
 .header_mobile_menu {
-    // display: none;
-    display: block;
+    background-color: white;
     width: 100%;
-    height: 0px;
-
+    height: 220px;
     
-//   opacity: ${props => props.isVisible ? '1'  : '0'};
-//   visibility: ${props => props.isVisible ? 'visible'  : 'hidden'};
-//   height: ${props => props.isVisible ? '200px'  : '0px'};
-//   ul {
-//     list-style: none;
-//     display: flex;
-//     flex-direction: column;
-//   }
+    ul {
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        all: initial;
+        
+    }
+    li {  
+        padding: 10px 0;
+        text-align: center;
+        width: 100%;
+        font-family: "Open Sans";
+        text-transform: uppercase;
+        a:visited, a:link , a:active {
+            color: black;
+            text-decoration: none;
+            
+        }
+        a:hover{
+            text-decoration: underline;
+        }
+    }
+
+    transition: all 0.5s ease;
 }
 
-.open_mobile_menu {
-    height: 200px;
-    transition: height 0.5s ease;
-
+.header_mobile_menu_close {
+    height: 0;
+    visibility: hidden;
+    ul {
+        visibility: hidden;
+    }
+    ul li {
+        visibility: hidden;
+    }
+    transition: all 0.5s ease;
 }
