--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -1,9 +1,13 @@
 .contact {
     max-width: 942px; 
     margin: 0 auto;
+    @media(max-width: 942px) {
+        margin: 0 1rem;
+    }
 }
 
 .contact__form{
+   
     max-width: 942px; 
     height: 350px;
     width: 100%;
@@ -29,6 +33,8 @@
         resize: none;
         padding: 10px;
     }
+
+    
 
 }
 
