--- a/src/css/footer.scss
+++ b/src/css/footer.scss
@@ -20,7 +20,6 @@
     @media(max-width:500px) {
         flex-direction: column;
         padding-bottom: 50px;
-        transform: translateY(0px);
 
         
     }
@@ -59,9 +58,6 @@
         margin-left: 20px; 
     }
 
-    @media(max-width: 499px){
-        margin-left: 0px;
-    }
 
     span {
         color: #ff6868;
@@ -72,9 +68,17 @@
 }
 
 .footer__icons {
-    width: 150px;
     display:flex;  
     
+    @media(min-width: 320px) {
+        margin: 0;
+    }
+    @media(max-width: 942px) {
+        // margin-right: 1rem;
+    }
+    // @media(max-width:500px) {
+    //     margin: 0;
+    // }
 }
 
 .footer__icon__wrapper {
@@ -84,6 +88,7 @@
     width: 28px; height: 28px;
     border-radius: 50%;
     background: linear-gradient(to top, #a64c58, #ff6868);
+
 }
 .footer__icon__addintional__wrapper {
     position: absolute;
