fixing netlify problem

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -17,8 +17,7 @@
     }
 }
 
-.we__deliver {
-    position: relative;
+h3 {
     max-width: 312px;
     width: 100%;
     background-image: linear-gradient(to top, #3d454f, #ff6868);
@@ -66,6 +65,9 @@
         text-align: left;
         color: #ffffff;
 
+        @media(max-width: 768px) {
+            width: 50%;
+        }
     }
 
     @media(max-width: 942px) {
