changing color gradient a bit

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -19,7 +19,7 @@
 h3 {
     max-width: 312px;
     width: 100%;
-    background-image: linear-gradient(to top, #3d454f, #ff6868);
+    background-image: linear-gradient(to top, #a64c58, #ff6868);
     font-family: "Open Sans";
     font-size: 52px;
     font-weight: 800;
