--- a/src/css/portfolio.scss
+++ b/src/css/portfolio.scss
@@ -49,7 +49,7 @@
     background-clip: text;
     -webkit-text-fill-color: transparent;
 
-    background-image: linear-gradient(to top, #3d454f, #ff6868);
+    background-image: linear-gradient(to top, #a64c58, #ff6868);
 
     font-size: 24px;
 
