--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -16,6 +16,11 @@
     }
 }
 
+.mainSection__background {
+    background-image: url(/images/main/phone/small.png);
+}
+
+
 h3 {
     max-width: 312px;
     width: 100%;
@@ -74,5 +79,5 @@ h3 {
     width: 100%;
     height: 100%;
     max-height: 628px;
-    position: absolute;
+    // position: absolute;
 }
