--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -79,5 +79,7 @@ h3 {
     width: 100%;
     height: 100%;
     max-height: 628px;
-    // position: absolute;
+    @media(min-width: 800px) {
+        position: absolute;
+    }
 }
