--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -1,3 +1,5 @@
+@import "./shared.scss";
+
 .contact {
     max-width: 942px; 
     margin: 0 auto;
@@ -18,7 +20,7 @@
     grid-gap: 10px;
 
     input, textarea, select, option {
-        background-color: #f5f7f9;
+        background-color: $inputs;
         border: none;
         font-family: 'Open Sans';
         font-size: 12px;
@@ -28,7 +30,7 @@
         line-height: normal;
         letter-spacing: normal;
         text-align: left;
-        color: #a2a2a2;
+        color: $input_placeholder;
 
         resize: none;
         padding: 10px;
@@ -38,7 +40,7 @@
 
 }
 
-.input1 {
+.input__name {
     max-height: 46px;
     grid-column: 1/3;
     grid-row: 1/2; 
@@ -48,7 +50,7 @@
         grid-row: 1;
     }
 }
-.input2 {
+.input__email {
     grid-column: 3/5;
     grid-row: 1;
     max-height: 46px;
@@ -58,21 +60,21 @@
         grid-row: 2;
     }
 }
-.input3 {
+.input__topic {
     padding: 0;
 
     grid-column: 5/7;
     grid-row: 1;
 
     max-height:52px;
-    background-color: white;
+    background-color: $white;
 
     @media(max-width: 600px){
       grid-column: 1/7;
       grid-row: 3;  
     }
 }
-.input4 {
+.input__message {
     grid-column: 1/7; 
     grid-row: 5;//4
     height: 256px;
@@ -86,7 +88,7 @@
 }
 
 .input__validation__fail {
-    border: 1px solid red !important;
+    border: 1px solid $red !important;
 }
 
 .button__container {
