--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,5 @@
+@import "./shared.scss";
+
 .mainSection{
     width: 100%;
     height: 628px;
@@ -16,15 +18,10 @@
     }
 }
 
-.mainSection__background {
-    background-image: url(/images/main/phone/small.png);
-}
-
-
 h3 {
     max-width: 312px;
     width: 100%;
-    background-image: linear-gradient(to top, #a64c58, #ff6868);
+    background-image: linear-gradient(to top, $salmon-dark, $salmon);
     font-family: "Open Sans";
     font-size: 52px;
     font-weight: 800;
@@ -67,7 +64,7 @@ h3 {
         line-height: 1.5;
         letter-spacing: normal;
         text-align: left;
-        color: #ffffff;
+        color: $white;
     }
 
     @media(max-width: 942px) {
