--- a/src/css/portfolio.scss
+++ b/src/css/portfolio.scss
@@ -49,7 +49,7 @@
     background-clip: text;
     -webkit-text-fill-color: transparent;
 
-    background-image: linear-gradient(to top, #a64c58, #ff6868);
+    background-image: linear-gradient(to top, $salmon-dark, $salmon);
 
     font-size: 24px;
 
@@ -62,7 +62,7 @@
         padding: 0 10px;
         margin-left: 20px;
 
-        border: 2px solid #ff6868;
+        border: 2px solid $salmon;
     }
     
 }
