--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -4,6 +4,7 @@
     width: 100%;
     min-height: 95px;
     background-image: linear-gradient(to bottom, $header-darker, $header-lighter); 
+    
 }
 
 
@@ -27,7 +28,7 @@
     font-stretch: normal;
     line-height: normal;
     letter-spacing: normal;
-    
+    cursor: pointer;
     color: $salmon;
     text-transform: uppercase;
 
@@ -48,6 +49,9 @@
         align-items: center;
         justify-content: center;
         list-style: none;
+        li > a {
+            cursor: pointer
+        }
     }
 
     
@@ -60,7 +64,7 @@
         text-transform: uppercase;
         text-decoration: none;
     }
-
+   
     a:visited{color:$header-link;}
     a:link{color:$header-link;}
 
@@ -137,6 +141,9 @@
         width: 100%;
         font-family: "Open Sans";
         text-transform: uppercase;
+        & > a {
+            cursor: pointer
+        }
         a:visited, a:link , a:active {
             color: $black;
             text-decoration: none;
