wrapping portfolio section so we can navigate there

--- a/src/css/portfolio.scss
+++ b/src/css/portfolio.scss
@@ -1,5 +1,7 @@
 @import "./shared.scss";
-
+.portfolio {
+    width: 100%;
+}
 .project_main_container ol, ul {
     list-style: none;
     line-height: 0;
