--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -15,7 +15,7 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(6, 1fr);
+    grid-template-rows: repeat(7, 1fr);
     margin: 0 auto;
     grid-gap: 10px;
 
@@ -76,8 +76,12 @@
 }
 .input__message {
     grid-column: 1/7; 
-    grid-row: 5;//4
+    grid-row: 2/7;
     height: 256px;
+    @media(max-width: 600px){
+        grid-column: 1/7;
+        grid-row: 5/8;
+    }
 }
 
 .subtopic__input{
