changing float to left

--- a/src/css/portfolio.scss
+++ b/src/css/portfolio.scss
@@ -12,7 +12,7 @@
     width: 100%;
 }
 .project_container {
-    float: right;
+    float: left;
     width: 25%;
     background-size:cover;
     overflow:hidden;
