--- a/src/css/footer.scss
+++ b/src/css/footer.scss
@@ -33,7 +33,7 @@
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
-            font-family: "Open Sans";
+            font-family: $font1;
             font-weight: 900;
             font-style: normal;
             font-stretch: normal;
