--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 @font-face {
   font-family: 'Myriad Pro Regular';
@@ -11,7 +11,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Open Sans", "Myriad Pro Regular", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: "Roboto", "Myriad Pro Regular", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
