--- a/src/css/service.scss
+++ b/src/css/service.scss
@@ -44,7 +44,7 @@
 
 .service__feature__text {
     width: 288px;
-    font-family: "Myriad Pro";
+    font-family: $font2;
     font-size: 14px;
     font-weight: normal;
     font-style: normal;
