--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -20,7 +20,7 @@
 
 .header__logo{
     all: initial;
-    font-family: "Open Sans";
+    font-family: $font1;
     font-size: 22px;
     font-weight: bolder;
     font-weight: 900;
@@ -70,7 +70,7 @@
 
     width: 374px;
     height: 12px;
-    font-family: 'Open Sans';
+    font-family: $font1;
     font-size: 14px;
     font-weight: bold;
     font-style: normal;
@@ -139,7 +139,7 @@
         padding: 20px 0;
         text-align: center;
         width: 100%;
-        font-family: "Open Sans";
+        font-family: $font1;
         text-transform: uppercase;
         & > a {
             cursor: pointer
