--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -13,7 +13,7 @@
     top: -510px;
     position: relative;
     // z-index: 3;
-    @media(max-width: 800px) {
+    @media(max-width: 820px) {
         display: none;
     }
 }
@@ -22,7 +22,7 @@ h3 {
     max-width: 312px;
     width: 100%;
     background-image: linear-gradient(to top, $salmon-dark, $salmon);
-    font-family: "Open Sans";
+    font-family: $font1;
     font-size: 52px;
     font-weight: 800;
     font-style: normal;
@@ -56,7 +56,7 @@ h3 {
 
     p {
         max-width: 312px;
-        font-family: "Myriad Pro";
+        font-family: $font2;
         font-size: 14px;
         font-weight: normal;
         font-style: normal;
